[sd-4287]-(fix) - Layout issue in monitoring settings item count

--- a/scripts/superdesk-monitoring/styles/aggregate.less
+++ b/scripts/superdesk-monitoring/styles/aggregate.less
@@ -405,7 +405,7 @@
     }
     .desk-title {
         float: left;
-        width: 100%;
+        width: 80%;
         font-size: 15px;
         .text-semibold();
         padding: 5px 0 10px 0;
@@ -423,6 +423,9 @@
         .switch {
             float: right;
         }
+    }
+    .box-items-count {
+        width: 20%;
     }
     .stages {
         li {
